重构前端为 Digital Banking 风格并修复 CORS 配置
前端设计重构:
- 更新 global.css 为数字银行风格（蓝色系 #0066FF）
- 使用 Plus Jakarta Sans 和 JetBrains Mono 字体
- 优化 MainLayout、DashboardPage 样式
- 采用 Slate 中性色系，更专业的视觉效果

Bug 修复:
- 修复 SecurityConfig CORS 配置，添加前端开发服务器地址
- 允许 localhost:3004 和 127.0.0.1:3004 访问
- 添加 PATCH 方法和 maxAge 配置

代码优化:
- 统一阴影系统和边框样式
- 优化动画效果和过渡时间
- 改进表单和按钮组件样式